--- a/index.html
+++ b/index.html
@@ -99,8 +99,56 @@ img.emoji {
 	
 </div><!-- #site-logo -->
 
+			<div id="site-navigation-wrap" class="clr">
+		
+			
+			
+			<nav id="site-navigation" class="navigation main-navigation clr" itemscope="itemscope" itemtype="https://schema.org/SiteNavigationElement" role="navigation">
 
+				<ul id="menu-main" class="main-menu dropdown-menu sf-menu"><li id="menu-item-14" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children dropdown menu-item-14"><a href="https://ilyushqqa.github.io/xenobablog/category/computing-learning/" class="menu-link"><span class="text-wrap">Computing <span class="nav-arrow fa fa-angle-down"></span></span></a>
+<ul class="sub-menu">
+	<li id="menu-item-15" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-15"><a href="https://ilyushqqa.github.io/xenobablog/category/computing-learning/computing-it-learning/" class="menu-link"><span class="text-wrap">IT Learning</span><span class="nav-content">Theory of computing</span></a></li>	<li id="menu-item-16" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-16"><a href="https://ilyushqqa.github.io/xenobablog/category/computing-learning/computing-oses/" class="menu-link"><span class="text-wrap">OS</span><span class="nav-content">Latest releases, features of OS world</span></a></li>	<li id="menu-item-17" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-17"><a href="https://ilyushqqa.github.io/xenobablog/category/computing-learning/computing-tech/" class="menu-link"><span class="text-wrap">Tech</span><span class="nav-content">Everything from Tech world</span></a></li></ul>
+</li><li id="menu-item-18" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children dropdown menu-item-18"><a href="https://ilyushqqa.github.io/xenobablog/category/gdesign-blog/" class="menu-link"><span class="text-wrap">Graphic design <span class="nav-arrow fa fa-angle-down"></span></span></a>
+<ul class="sub-menu">
+	<li id="menu-item-19" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-19"><a href="https://ilyushqqa.github.io/xenobablog/category/gdesign-blog/gdesign-c4d/" class="menu-link"><span class="text-wrap">MAXON Cinema4D</span><span class="nav-content">Cinema4D blog</span></a></li>	<li id="menu-item-20" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-20"><a href="https://ilyushqqa.github.io/xenobablog/category/gdesign-blog/gdesign-portoflio/" class="menu-link"><span class="text-wrap">portfolio</span><span class="nav-content">xenoba’s portfolio</span></a></li></ul>
+</li><li id="menu-item-21" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children dropdown menu-item-21"><a href="https://ilyushqqa.github.io/xenobablog/category/programming-learning/" class="menu-link"><span class="text-wrap">Programming <span class="nav-arrow fa fa-angle-down"></span></span></a>
+<ul class="sub-menu">
+	<li id="menu-item-22" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-22"><a href="https://ilyushqqa.github.io/xenobablog/category/programming-learning/programing-c-sharp/" class="menu-link"><span class="text-wrap">C#</span><span class="nav-content">C# learning blog</span></a></li>	<li id="menu-item-23" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-23"><a href="https://ilyushqqa.github.io/xenobablog/category/programming-learning/programming-javascript-learning/" class="menu-link"><span class="text-wrap">JavaScript</span><span class="nav-content">Javascript learning blog</span></a></li>	<li id="menu-item-24" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-24"><a href="https://ilyushqqa.github.io/xenobablog/category/programming-learning/programming-python-learning/" class="menu-link"><span class="text-wrap">Python</span><span class="nav-content">Python learning blog</span></a></li></ul>
+</li><li class="search-toggle-li"><a href="#" class="site-search-toggle search-dropdown-toggle" aria-label="Search website"><span class="icon-magnifier" aria-hidden="true"></span></a></li></ul>
+<div id="searchform-dropdown" class="header-searchform-wrap clr">
+	
+<form role="search" method="get" class="searchform" action="https://ilyushqqa.github.io/xenobablog/">
+	<label for="ocean-search-form-1">
+		<span class="screen-reader-text">Search for:</span>
+		<input type="search" id="ocean-search-form-1" class="field" autocomplete="off" placeholder="Search" name="s">
+			</label>
+	</form></div><!-- #searchform-dropdown -->
+			</nav><!-- #site-navigation -->
+
+			
+			
+					</div><!-- #site-navigation-wrap -->
+		
+		
+	
 				
+	<div class="oceanwp-mobile-menu-icon clr mobile-right">
+
+		
+		
+		
+		<a href="#" class="mobile-menu" aria-label="Mobile Menu">
+							<i class="fa fa-bars" aria-hidden="true"></i>
+							<span class="oceanwp-text">Menu</span>
+
+						</a>
+
+		
+		
+		
+	</div><!-- #oceanwp-mobile-menu-navbar -->
+
+
 			</div><!-- #site-header-inner -->
 
 			
@@ -242,9 +290,9 @@ img.emoji {
 
 		<div id="search-2" class="sidebar-box widget_search clr">
 <form role="search" method="get" class="searchform" action="https://ilyushqqa.github.io/xenobablog/">
-	<label for="ocean-search-form-1">
+	<label for="ocean-search-form-2">
 		<span class="screen-reader-text">Search for:</span>
-		<input type="search" id="ocean-search-form-1" class="field" autocomplete="off" placeholder="Search" name="s">
+		<input type="search" id="ocean-search-form-2" class="field" autocomplete="off" placeholder="Search" name="s">
 			</label>
 	</form></div>		<div id="recent-posts-2" class="sidebar-box widget_recent_entries clr">		<h4 class="widget-title">Recent Posts</h4>		<ul>
 											<li>
@@ -342,7 +390,7 @@ img.emoji {
     
 <div id="mobile-menu-search" class="clr">
 	<form method="get" action="https://ilyushqqa.github.io/xenobablog/" class="mobile-searchform" role="search" aria-label="Search for:">
-		<label for="ocean-mobile-search2">
+		<label for="ocean-mobile-search3">
 			<input type="search" name="s" autocomplete="off" placeholder="Search" />
 			<button type="submit" class="searchform-submit" aria-label="Submit Search">
 				<i class="icon icon-magnifier" aria-hidden="true"></i>
